--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ theme: jekyll-theme-minimal
 title: Kenneth Bunker
 
 # Short description of your site
-description: Peronal website
+description: Personal website
 
 # List of links in the navigation bar
 navbar-links:
@@ -13,7 +13,6 @@ navbar-links:
     - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
     - Learn markdown: "http://www.markdowntutorial.com/"
   Author's home: "http://deanattali.com"
-
 
 
 # Select your active Social Network Links
