--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@
   link: /about.html
 - name: Blog
   link: /blog.html
-- name: "Research Articles"
+- name: Research Articles
   link: /research-articles.html
 - name: "Book Reviews"
   link: /book-reviews.html
